Clean up CSS - elimnated excess code - got rid of the body background - and played with the header spacing - hoping it fixes the glitch - also removed the background artwork from the radio

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -45,10 +45,10 @@
 
 body {
     font-family: 'Barlow', sans-serif;
-    color:white;
-    background-image: url("https://i.gifer.com/1AkD.gif");
+    background-image: transparent;
     background-size:cover;
     background-attachment: fixed;
+    color:white;
 }
 /*Change the opacity of the background */
 body::before {
@@ -58,7 +58,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 15, 43, 0.765);
+  background-color: rgba(0, 15, 43, 0.565);
   z-index: -1;
 }
 
@@ -242,7 +242,7 @@ audio {
 /*TOP LOGO WORK*/
 .topLogo-wrap {
   width:100%!important;
-  height:150px;
+  height:100px;
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -291,7 +291,7 @@ audio {
   /*TOP NAV SUGAR STYLES */
   .navTippyWrap {
     width: 100%;
-    height:125px;
+    height:100px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -303,7 +303,7 @@ audio {
     z-index:10;
     margin-bottom:10px;
     padding-bottom:10px;
-    padding-top:20px;
+    padding-top:40px;
 
   }
 
@@ -493,15 +493,17 @@ audio {
 /*FRONT PAGE STYLES */
 
 .frontSubHeader {
-  width: 100%;
-  height: 50px;
+  width: 100!important%;
+  height: 100px;
   overflow:hidden;
   display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-style:groove;
   border-color: var(--white);
   position:relative;
+  margin-top:10px;
 }
 
 
@@ -514,20 +516,20 @@ audio {
   justify-content: center;
 }
 
-.frontPage-logo {
+/*.frontPage-logo {
   width: 900px;
   height: 100%;
   display:block;
   mix-blend-mode: lighten;
-}
+}*/
 
-  .frontPage-logo {
+  /*.frontPage-logo {
     width: 100%;
     max-width:400px;
     height: auto;
     display:block;
     
-  }
+  }*/
 
 .monthBlock {
   min-width:520px;
@@ -593,12 +595,12 @@ audio {
 
 #updates-ahoy-app {
   background-color: var(--backgroundColor-sub);
-  border-style:solid;
-  border-color: var(--borderColor-inactive);
   position:relative;
   height:auto;
-  padding:20px;
+  padding:10px;
   padding-bottom:23px;
+  border-style:solid;
+  border-width:.5px;
 }
 
 .update-image {
@@ -656,12 +658,11 @@ audio {
   margin-top:15px;
 }
 
-.frontHeader {
-  background-color:rgba(0, 0, 0, 0.327);
-  padding-top: 5%;
-  padding-bottom: 5%;
+/*.frontHeader {
+  background-color:rgba(255, 10, 10, 0.327);
+
   width:100%; 
-  height:100%;
+  height:100px;
   display:flex;
   flex-direction: column;
   align-items:center;
@@ -671,7 +672,7 @@ audio {
   color:white;
   border-style: solid;
   border-color:var(--borderColor)!important;
-}
+}*/
 
 /*#mainFront {
   height:100vh;
@@ -706,14 +707,14 @@ audio {
 }
 
 
-.blogItem-head {
+/*.blogItem-head {
   background-color:red;
   height:50%;
   display:flex;
   align-items: center;
   justify-content: center;
 
-}
+}*/
 
 .blogItem-content {
   background-color:var(--liveColor);
